--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,7 @@
     --muted-foreground: 215.4 16.3% 46.9%;
     --accent: 283 11% 63%;
     --accent-foreground: 0 0% 100%;
+    --accent-dark: 215 28% 17%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
     --border: 214.3 31.8% 91.4%;
@@ -45,6 +46,7 @@
     --muted-foreground: 215 20.2% 65.1%;
     --accent: 283 11% 63%;
     --accent-foreground: 210 40% 98%;
+    --accent-dark: 215 28% 27%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
     --border: 217.2 32.6% 17.5%;
