--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,6 +69,12 @@
   }
 }
 
+@layer utilities {
+  .container {
+    @apply mx-auto w-full max-w-screen-xl px-4 sm:px-6 lg:px-16;
+  }
+}
+
 ::selection {
   background-color: hsl(var(--primary));
   color: hsl(var(--primary-foreground));
